Fix some spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -270,9 +270,7 @@
 
 /* Featured Posts */
 .featured-posts {
-  border-bottom: 1px solid $gray-lighter;
-  margin-bottom: 5em;
-  padding-bottom: 1.66667em;
+  margin-bottom: 2em;
 }
 
 .featured-posts .read-more {
@@ -409,7 +407,7 @@
 .hero-wrap {
   background: $gray-lightest;
   border-bottom: 1px solid $gray-lighter;
-  margin: 0 0 3.33333em;
+  margin: 0;
   position: relative;
 }
 
